--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 
 # dependencies
 /node_modules
-.env
-
 /.pnp
 .pnp.js
-
+.env
 # testing
 /coverage
 
@@ -15,8 +13,10 @@
 
 # misc
 .DS_Store
-.env*
-
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
