--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -2,8 +2,6 @@
 
 # dependencies
 /node_modules
-.env
-
 /.pnp
 .pnp.js
 
@@ -15,8 +13,10 @@
 
 # misc
 .DS_Store
-.env*
-
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
