--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,6 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "nodemon": "^2.0.19",
-    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -53,5 +52,8 @@
     ]
   },
   "proxy": "http://localhost:5000/",
-  "secure": false
+  "secure": false,
+  "devDependencies": {
+    "process": "^0.11.10"
+  }
 }
