--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "nodemon": "^2.0.19",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -52,8 +53,5 @@
     ]
   },
   "proxy": "http://localhost:5000/",
-  "secure": false,
-  "devDependencies": {
-    "process": "^0.11.10"
-  }
+  "secure": false
 }
