--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.5",
-    "@react-pdf/renderer": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "assert": "^2.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
     "nodemon": "^2.0.19",
-    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -23,15 +17,13 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^0.0.14",
-    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.5",
-    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
