--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
   "dependencies": {
     "@mayank1513/sticky-section-header": "^0.0.9",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "framer-motion": "^6.5.1",
     "pg": "^8.3.0",
     "react-alert": "^7.0.3",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.4.0",
     "react-date-range": "^1.4.0",
+    "react-icons": "^4.4.0",
     "react-router-hash-link": "^2.4.3",
     "react-sticky": "^6.0.3",
-    "react-sticky-box": "^1.0.2"
+    "react-sticky-box": "^1.0.2",
+    "styled-components": "^5.3.5"
   }
 }
