--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "engines": {
     "node": "16.13.2",
     "npm": "8.1.2"
@@ -22,18 +23,30 @@
   "license": "ISC",
   "dependencies": {
     "@mayank1513/sticky-section-header": "^0.0.9",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "pg": "^8.3.0",
+    "helmet": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react-alert": "^7.0.3",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.4.0",
     "react-date-range": "^1.4.0",
+    "react-icons": "^4.4.0",
     "react-router-hash-link": "^2.4.3",
     "react-sticky": "^6.0.3",
-    "react-sticky-box": "^1.0.2"
+    "react-sticky-box": "^1.0.2",
+    "sequelize": "^6.21.3",
+    "styled-components": "^5.3.5"
   }
 }
